header woman jacket man jacket section addad

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en"  data-theme="cupcake"> 
+<html lang="en" data-theme="cupcake">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,7 +19,8 @@
             }
         }
     </script>
-</head> 
+</head>
+
 <body>
     <header>
         <!-- Navbar Section Starts Here -->
@@ -73,7 +75,8 @@
                 <div class="hero-overlay bg-opacity-60"></div>
                 <div class="hero-content text-center text-neutral-content">
                     <div class="max-w-md">
-                        <h1 class="mb-5 text-3xl lg:text-5xl font-bold"><span class="text-yellow-300">BE THE PENGUIN</span>
+                        <h1 class="mb-5 text-3xl lg:text-5xl font-bold"><span class="text-yellow-300">BE THE
+                                PENGUIN</span>
                             OF WINTER</h1>
                         <p class="mb-5">Lorem ipsum dolor sit amet consectetur.</p>
                         <button class="btn">Buy Now</button>
@@ -82,6 +85,116 @@
             </div>
         </section>
         <!-- Banner Section Ends Here -->
+
+        <!-- Woman Jacket Section Starts Here -->
+        <section class="max-w-screen-xl mx-auto px-8 md:px-16 lg:px-24 py-5 mt-10 ">
+            <div class="text-center mb-10">
+                <h1 class="text-4xl font-bold ">Woman Jacket</h1>
+            </div>
+            <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-5">
+                <div class="card bg-purple-100 shadow-2xl p-4">
+                    <figure><img src="./images/jacket-1.png"
+                            alt="Shoes" /></figure>
+                    <div class="card-body">
+                        <h2 class="card-title">
+                             Woman
+                            <div class="badge badge-secondary">Yellow Coat Jacket</div>
+                        </h2>
+                        <p>If a dog chews shoes whose shoes does he choose?</p>
+                        <div class="flex items-center">
+                            <h1 class="flex-1 text-xl font-bold">Price: 350$</h1>
+                            <button class="flex-1 bg-green-400 p-2 rounded-md">Buy Now</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="card bg-purple-100 shadow-2xl p-4">
+                    <figure><img src="./images/jacket-2.png"
+                            alt="Shoes" /></figure>
+                    <div class="card-body">
+                        <h2 class="card-title">
+                             Woman
+                            <div class="badge badge-secondary">Yellow Coat Jacket</div>
+                        </h2>
+                        <p>If a dog chews shoes whose shoes does he choose?</p>
+                        <div class="flex items-center">
+                            <h1 class="flex-1 text-xl font-bold">Price: 350$</h1>
+                            <button class="flex-1 bg-green-400 p-2 rounded-md">Buy Now</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="card bg-purple-100 shadow-2xl p-4">
+                    <figure><img src="./images/jacket-3.png"
+                            alt="Shoes" /></figure>
+                    <div class="card-body">
+                        <h2 class="card-title">
+                             Woman
+                            <div class="badge badge-secondary">Red Coat Jacket</div>
+                        </h2>
+                        <p>If a dog chews shoes whose shoes does he choose?</p>
+                        <div class="flex items-center">
+                            <h1 class="flex-1 text-xl font-bold">Price: 350$</h1>
+                            <button class="flex-1 bg-green-400 p-2 rounded-md">Buy Now</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Woman Jacket Section Ends Here -->
+
+        <!-- Mans Jacket Section Starts Here -->
+        <section class="max-w-screen-xl mx-auto px-8 md:px-16 lg:px-24 py-5 mt-10">
+            <div class="text-center mb-10">
+                <h1 class="text-4xl font-bold ">Man's Jacket</h1>
+            </div>
+            <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-5">
+                <div class="card bg-purple-100 shadow-2xl p-4">
+                    <figure><img src="./images/jacket-4.png"
+                            alt="Shoes" /></figure>
+                    <div class="card-body">
+                        <h2 class="card-title">
+                             Man's
+                            <div class="badge badge-secondary">Yellow Coat Jacket</div>
+                        </h2>
+                        <p>If a dog chews shoes whose shoes does he choose?</p>
+                        <div class="flex items-center">
+                            <h1 class="flex-1 text-xl font-bold">Price: 750$</h1>
+                            <button class="flex-1 bg-green-400 p-2 rounded-md">Buy Now</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="card bg-purple-100 shadow-2xl p-4">
+                    <figure><img src="./images/jacket-5.png"
+                            alt="Shoes" /></figure>
+                    <div class="card-body">
+                        <h2 class="card-title">
+                             Man's
+                            <div class="badge badge-secondary">Deep Red Coat Jacket</div>
+                        </h2>
+                        <p>If a dog chews shoes whose shoes does he choose?</p>
+                        <div class="flex items-center">
+                            <h1 class="flex-1 text-xl font-bold">Price: 550$</h1>
+                            <button class="flex-1 bg-green-400 p-2 rounded-md">Buy Now</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="card bg-purple-100 shadow-2xl p-4">
+                    <figure><img src="./images/jacket-6.png"
+                            alt="Shoes" /></figure>
+                    <div class="card-body">
+                        <h2 class="card-title">
+                             Man's
+                            <div class="badge badge-secondary">Black Coat Jacket</div>
+                        </h2>
+                        <p>If a dog chews shoes whose shoes does he choose?</p>
+                        <div class="flex items-center">
+                            <h1 class="flex-1 text-xl font-bold">Price: 450$</h1>
+                            <button class="flex-1 bg-green-400 p-2 rounded-md">Buy Now</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Mans Jacket Section Ends Here -->
 
     </header>
     <main>
