header main footer compeleted section addad

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="shortcut icon" href="./images/logo.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.6.0/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script>
         tailwind.config = {
             theme: {
@@ -93,47 +96,47 @@
             </div>
             <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-5">
                 <div class="card bg-purple-100 shadow-2xl p-4">
-                    <figure><img src="./images/jacket-1.png"
-                            alt="Shoes" /></figure>
+                    <figure><img src="./images/jacket-1.png" alt="Shoes" /></figure>
                     <div class="card-body">
                         <h2 class="card-title">
-                             Woman
+                            Woman
                             <div class="badge badge-secondary">Yellow Coat Jacket</div>
                         </h2>
                         <p>If a dog chews shoes whose shoes does he choose?</p>
                         <div class="flex items-center">
-                            <h1 class="flex-1 text-xl font-bold">Price: 350$</h1>
-                            <button class="flex-1 bg-green-400 p-2 rounded-md">Buy Now</button>
+                            <h1 class="flex-1 text-xl font-bold">Price: 750$</h1>
+                            <button class="flex-1 bg-green-400 p-2 rounded-md"><span><i
+                                        class="fa-solid fa-cart-shopping"></i></span> Buy Now</button>
                         </div>
                     </div>
                 </div>
                 <div class="card bg-purple-100 shadow-2xl p-4">
-                    <figure><img src="./images/jacket-2.png"
-                            alt="Shoes" /></figure>
+                    <figure><img src="./images/jacket-2.png" alt="Shoes" /></figure>
                     <div class="card-body">
                         <h2 class="card-title">
-                             Woman
+                            Woman
                             <div class="badge badge-secondary">Yellow Coat Jacket</div>
                         </h2>
                         <p>If a dog chews shoes whose shoes does he choose?</p>
                         <div class="flex items-center">
-                            <h1 class="flex-1 text-xl font-bold">Price: 350$</h1>
-                            <button class="flex-1 bg-green-400 p-2 rounded-md">Buy Now</button>
+                            <h1 class="flex-1 text-xl font-bold">Price: 750$</h1>
+                            <button class="flex-1 bg-green-400 p-2 rounded-md"><span><i
+                                        class="fa-solid fa-cart-shopping"></i></span> Buy Now</button>
                         </div>
                     </div>
                 </div>
                 <div class="card bg-purple-100 shadow-2xl p-4">
-                    <figure><img src="./images/jacket-3.png"
-                            alt="Shoes" /></figure>
+                    <figure><img src="./images/jacket-3.png" alt="Shoes" /></figure>
                     <div class="card-body">
                         <h2 class="card-title">
-                             Woman
+                            Woman
                             <div class="badge badge-secondary">Red Coat Jacket</div>
                         </h2>
                         <p>If a dog chews shoes whose shoes does he choose?</p>
                         <div class="flex items-center">
-                            <h1 class="flex-1 text-xl font-bold">Price: 350$</h1>
-                            <button class="flex-1 bg-green-400 p-2 rounded-md">Buy Now</button>
+                            <h1 class="flex-1 text-xl font-bold">Price: 750$</h1>
+                            <button class="flex-1 bg-green-400 p-2 rounded-md"><span><i
+                                        class="fa-solid fa-cart-shopping"></i></span> Buy Now</button>
                         </div>
                     </div>
                 </div>
@@ -148,60 +151,96 @@
             </div>
             <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-5">
                 <div class="card bg-purple-100 shadow-2xl p-4">
-                    <figure><img src="./images/jacket-4.png"
-                            alt="Shoes" /></figure>
+                    <figure><img src="./images/jacket-4.png" alt="Shoes" /></figure>
                     <div class="card-body">
                         <h2 class="card-title">
-                             Man's
+                            Man's
                             <div class="badge badge-secondary">Yellow Coat Jacket</div>
                         </h2>
                         <p>If a dog chews shoes whose shoes does he choose?</p>
                         <div class="flex items-center">
                             <h1 class="flex-1 text-xl font-bold">Price: 750$</h1>
-                            <button class="flex-1 bg-green-400 p-2 rounded-md">Buy Now</button>
+                            <button class="flex-1 bg-green-400 p-2 rounded-md"><span><i
+                                        class="fa-solid fa-cart-shopping"></i></span> Buy Now</button>
                         </div>
                     </div>
                 </div>
                 <div class="card bg-purple-100 shadow-2xl p-4">
-                    <figure><img src="./images/jacket-5.png"
-                            alt="Shoes" /></figure>
+                    <figure><img src="./images/jacket-5.png" alt="Shoes" /></figure>
                     <div class="card-body">
                         <h2 class="card-title">
-                             Man's
+                            Man's
                             <div class="badge badge-secondary">Deep Red Coat Jacket</div>
                         </h2>
                         <p>If a dog chews shoes whose shoes does he choose?</p>
                         <div class="flex items-center">
-                            <h1 class="flex-1 text-xl font-bold">Price: 550$</h1>
-                            <button class="flex-1 bg-green-400 p-2 rounded-md">Buy Now</button>
+                            <h1 class="flex-1 text-xl font-bold">Price: 750$</h1>
+                            <button class="flex-1 bg-green-400 p-2 rounded-md"><span><i
+                                        class="fa-solid fa-cart-shopping"></i></span> Buy Now</button>
                         </div>
                     </div>
                 </div>
                 <div class="card bg-purple-100 shadow-2xl p-4">
-                    <figure><img src="./images/jacket-6.png"
-                            alt="Shoes" /></figure>
+                    <figure><img src="./images/jacket-6.png" alt="Shoes" /></figure>
                     <div class="card-body">
                         <h2 class="card-title">
-                             Man's
+                            Man's
                             <div class="badge badge-secondary">Black Coat Jacket</div>
                         </h2>
                         <p>If a dog chews shoes whose shoes does he choose?</p>
                         <div class="flex items-center">
-                            <h1 class="flex-1 text-xl font-bold">Price: 450$</h1>
-                            <button class="flex-1 bg-green-400 p-2 rounded-md">Buy Now</button>
+                            <h1 class="flex-1 text-xl font-bold">Price: 750$</h1>
+                            <button class="flex-1 bg-green-400 p-2 rounded-md"><span><i
+                                        class="fa-solid fa-cart-shopping"></i></span> Buy Now</button>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
         <!-- Mans Jacket Section Ends Here -->
-
     </header>
     <main>
 
+        <section class="max-w-screen-xl mx-auto px-8 md:px-16 lg:px-24 py-5 mt-10">
+            <div class="flex flex-col lg:flex-row items-center">
+                <!-- Easy Purchase text -->
+                <div class=" flex-1 items-center">
+                    <h1 class="text-3xl md:text-4xl lg:text-4xl mb-5">Easy Purchase</h1>
+                    <p>we believe that style is a reflection of your unique personality and our mission is to provide
+                        you with a
+                        diverse and trendy collection.</p>
+                    <p>Our mission is to provide you with a diverse and trendy collection.</p>
+                </div>
+                <!-- Easy Purchase image -->
+                <div class=" flex-1 ">
+                    <img src="./images/model.png" alt="">
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
-
+        <footer class="footer p-10 bg-neutral text-neutral-content">
+            <nav>
+                <h6 class="footer-title">Services</h6>
+                <a class="link link-hover">Branding</a>
+                <a class="link link-hover">Design</a>
+                <a class="link link-hover">Marketing</a>
+                <a class="link link-hover">Advertisement</a>
+            </nav>
+            <nav>
+                <h6 class="footer-title">Company</h6>
+                <a class="link link-hover">About us</a>
+                <a class="link link-hover">Contact</a>
+                <a class="link link-hover">Jobs</a>
+                <a class="link link-hover">Press kit</a>
+            </nav>
+            <nav>
+                <h6 class="footer-title">Legal</h6>
+                <a class="link link-hover">Terms of use</a>
+                <a class="link link-hover">Privacy policy</a>
+                <a class="link link-hover">Cookie policy</a>
+            </nav>
+        </footer>
     </footer>
 </body>
 
